--- a/frontend/index.html
+++ b/frontend/index.html
@@ -122,6 +122,9 @@
       let baseRotX = 0;
       let baseY = 0.6;
 
+      let jawDict = null;
+      let jawInfluences = null;
+
       const scene = new THREE.Scene();
       const camera = new THREE.PerspectiveCamera(30, window.innerWidth / window.innerHeight, 0.1, 1000);
       camera.position.set(0, 0, 2.8);
@@ -151,14 +154,23 @@
           model = gltf.scene;
 
           model.rotation.y = -Math.PI / 2;
-baseRotY = -Math.PI / 2;
+          baseRotY = -Math.PI / 2;
 
-model.position.set(0, 0.07, 0);
-baseY = 0.05;
+          model.position.set(0, 0.07, 0);
+          baseY = 0.05;
 
-model.scale.set(0.9, 0.9, 0.9);
+          model.scale.set(0.9, 0.9, 0.9);
 
           scene.add(model);
+
+          // Morph Targets vorbereiten
+          model.traverse((child) => {
+            if (child.isMesh && child.morphTargetDictionary) {
+              jawDict = child.morphTargetDictionary;
+              jawInfluences = child.morphTargetInfluences;
+            }
+          });
+
           loadingText.style.display = "none";
           animate();
         },
@@ -241,23 +253,15 @@ model.scale.set(0.9, 0.9, 0.9);
         utter.rate = 0.95;
         utter.pitch = 0.6;
         utter.voice = getMaleVoice();
-        utter.onstart = () => (talking = true);
-        utter.onend = () => (talking = false);
+        utter.onstart = () => {
+          talking = true;
+          startJawAnimation();
+        };
+        utter.onend = () => {
+          talking = false;
+          stopJawAnimation();
+        };
         speechSynthesis.speak(utter);
       }
 
-      if (typeof speechSynthesis !== "undefined" && speechSynthesis.onvoiceschanged !== undefined) {
-        speechSynthesis.onvoiceschanged = getMaleVoice;
-      }
-
-      // === Begrüßung nach erster Berührung ===
-      let greeted = false;
-      window.addEventListener("click", () => {
-        if (!greeted) {
-          greeted = true;
-          speak("Seid gegrüßt, mein Freund. Ich bin Friedrich Barbarossa, nach tausend Jahren im Kaiserberg zu Lautern erwacht aus tiefem Schlummer. Sprecht, was begehrt Ihr?");
-        }
-      });
-    </script>
-  </body>
-</html>
+      if
