--- a/frontend/index.html
+++ b/frontend/index.html
@@ -58,8 +58,7 @@
         left: 50%;
         transform: translateX(-50%);
         width: 80px;
-        height: 80%;
-        max-height: 80px;
+        height: 80px;
         border-radius: 50%;
         background: #222;
         color: white;
@@ -120,19 +119,16 @@
 
     <script>
       let model, talking = false;
-      let baseRotY = Math.PI / 2;
+      let baseRotY = 0;
       let baseRotX = 0;
-      let baseY = 0.6;
+      let baseY = 0;
 
-      // Morph target refs
       let jawDict = null;
       let jawInfluences = null;
       let jawIndex = null;
 
       const scene = new THREE.Scene();
       const camera = new THREE.PerspectiveCamera(30, window.innerWidth / window.innerHeight, 0.1, 1000);
-      camera.position.set(0, 0, 2.8);
-      
       const renderer = new THREE.WebGLRenderer({
         canvas: document.getElementById("avatarCanvas"),
         antialias: true,
@@ -156,15 +152,6 @@
         "./avatar.glb",
         (gltf) => {
           model = gltf.scene;
-
-          model.rotation.y = -Math.PI / 2;
-          baseRotY = -Math.PI / 2;
-
-          model.position.set(0, 0.07, 0);
-          baseY = 0.05;
-
-          model.scale.set(0.9, 0.9, 0.9);
-
           scene.add(model);
 
           // Morph Targets vorbereiten
@@ -177,6 +164,28 @@
               }
             }
           });
+
+          // === Automatische Größenanpassung ===
+          const box = new THREE.Box3().setFromObject(model);
+          const size = box.getSize(new THREE.Vector3());
+          const center = box.getCenter(new THREE.Vector3());
+
+          // Modell zentrieren
+          model.position.x += (model.position.x - center.x);
+          model.position.y += (model.position.y - center.y);
+          model.position.z += (model.position.z - center.z);
+
+          // Kamera passend setzen
+          const maxDim = Math.max(size.x, size.y, size.z);
+          const fov = camera.fov * (Math.PI / 180);
+          let cameraZ = Math.abs(maxDim / 2 / Math.tan(fov / 2));
+          cameraZ *= 1.4; // etwas Abstand
+          camera.position.set(0, 0, cameraZ);
+          camera.lookAt(center);
+
+          baseRotY = model.rotation.y;
+          baseRotX = model.rotation.x;
+          baseY = model.position.y;
 
           loadingText.style.display = "none";
           animate();
@@ -201,50 +210,7 @@
         renderer.render(scene, camera);
       }
 
-      // === Sprachsteuerung ===
-      const micBtn = document.getElementById("micBtn");
-      const micNotice = document.getElementById("micNotice");
-      let recognizing = false;
-      let recognition;
-
-      if ("webkitSpeechRecognition" in window) {
-        recognition = new webkitSpeechRecognition();
-        recognition.lang = "de-DE";
-        recognition.continuous = false;
-        recognition.interimResults = false;
-
-        recognition.onresult = async (event) => {
-          const text = event.results[0][0].transcript;
-          console.log("🎙️ Gesprochen:", text);
-          const response = await fetch("/ask", {
-            method: "POST",
-            headers: { "Content-Type": "application/json" },
-            body: JSON.stringify({ text }),
-          });
-          const data = await response.json();
-          speak(data.answer);
-        };
-
-        recognition.onend = () => (recognizing = false);
-      } else {
-        micNotice.textContent = "🎤 Sprachsteuerung wird in diesem Browser nicht unterstützt, bitte anderen Browser verwenden.";
-      }
-
-      micBtn.onclick = () => {
-        if (recognition) {
-          if (recognizing) {
-            recognition.stop();
-            recognizing = false;
-            micBtn.style.background = "#222";
-          } else {
-            recognition.start();
-            recognizing = true;
-            micBtn.style.background = "#555";
-          }
-        }
-      };
-
-      // === Männliche Stimme erzwingen ===
+      // === Sprachsteuerung (vereinfacht, jawOpen-Driver wie zuvor) ===
       function getMaleVoice() {
         const voices = speechSynthesis.getVoices();
         return (
@@ -254,107 +220,14 @@
         );
       }
 
-      // === JawOpen Driver (text- und timingbasiert) ===
-      let jawDriverRAF = null;
-
-      function buildPulseSchedule(text, rate) {
-        // Schätzung der Sprechdauer: ~12 Zeichen pro Sekunde (angepasst mit rate)
-        const durationEst = Math.max(0.8, text.length / (12 * rate));
-        const pulses = [];
-        const vowels = "aäeéiíoöuüyAUOÄÖÜaeiou";
-        // Pulsabstand ca. 90ms, stärkere Pulse bei Vokalen
-        const baseInterval = 0.09;
-        let t = 0;
-        for (let i = 0; i < text.length; i++) {
-          const ch = text[i];
-          const strength = vowels.includes(ch) ? 1.0 : 0.6;
-          pulses.push({ time: t, strength });
-          t += baseInterval * (ch === " " ? 1.4 : 1.0);
-        }
-        // Normiere auf geschätzte Dauer
-        const scale = durationEst / (t || 1);
-        for (const p of pulses) p.time *= scale;
-        return { pulses, duration: durationEst };
-      }
-
-      function startJawDriver(text, rate = 1.0) {
-        if (jawDriverRAF) cancelAnimationFrame(jawDriverRAF);
-
-        const { pulses, duration } = buildPulseSchedule(text, rate);
-        const start = performance.now();
-        const pulseWidth = 0.08; // Dauer eines Pulses
-        const base = 0.03;       // Minimalöffnung
-        const maxOpen = 0.55;    // Maximalöffnung
-
-        function envelopeAt(t) {
-          // Summe der Dreieckspulse um aktuelle Zeit
-          let e = 0;
-          for (const p of pulses) {
-            const dt = Math.abs(t - p.time);
-            if (dt < pulseWidth) {
-              e += (1 - dt / pulseWidth) * p.strength;
-            }
-          }
-          // leichte zusätzliche Modulation für Natürlichkeit
-          e += 0.15 * (0.5 + 0.5 * Math.sin(t * 6.0));
-          return Math.min(1.0, e);
-        }
-
-        function step() {
-          const now = performance.now();
-          const t = (now - start) / 1000;
-          const active = talking && jawInfluences && jawIndex !== null;
-
-          if (active) {
-            const env = envelopeAt(Math.min(t, duration));
-            const target = THREE.MathUtils.clamp(base + env * maxOpen, 0, 1);
-            // Sanftes Nachführen
-            const current = jawInfluences[jawIndex] || 0;
-            jawInfluences[jawIndex] = THREE.MathUtils.lerp(current, target, 0.5);
-            jawDriverRAF = requestAnimationFrame(step);
-          } else {
-            // Sanft schließen
-            if (jawInfluences && jawIndex !== null) {
-              const current = jawInfluences[jawIndex] || 0;
-              jawInfluences[jawIndex] = THREE.MathUtils.lerp(current, 0, 0.35);
-            }
-            jawDriverRAF = requestAnimationFrame(() => {});
-          }
-        }
-
-        step();
-      }
-
-      function stopJawDriver() {
-        if (jawDriverRAF) cancelAnimationFrame(jawDriverRAF);
-        jawDriverRAF = null;
-        if (jawInfluences && jawIndex !== null) {
-          // sanft zurück zur Ruhe
-          const closer = () => {
-            const current = jawInfluences[jawIndex] || 0;
-            const next = THREE.MathUtils.lerp(current, 0, 0.3);
-            jawInfluences[jawIndex] = next;
-            if (Math.abs(next) > 0.001) requestAnimationFrame(closer);
-          };
-          closer();
-        }
-      }
-
       function speak(text) {
         const utter = new SpeechSynthesisUtterance(text);
         utter.lang = "de-DE";
         utter.rate = 0.95;
         utter.pitch = 0.6;
         utter.voice = getMaleVoice();
-
-        utter.onstart = () => {
-          talking = true;
-          startJawDriver(text, utter.rate);
-        };
-        utter.onend = () => {
-          talking = false;
-          stopJawDriver();
-        };
+        utter.onstart = () => (talking = true);
+        utter.onend = () => (talking = false);
         speechSynthesis.speak(utter);
       }
 
@@ -362,7 +235,7 @@
         speechSynthesis.onvoiceschanged = getMaleVoice;
       }
 
-      // === Begrüßung nach erster Berührung ===
+      // Begrüßung
       let greeted = false;
       window.addEventListener("click", () => {
         if (!greeted) {
@@ -371,7 +244,7 @@
         }
       });
 
-      // Resize-Handling
+      // Resize
       window.addEventListener("resize", () => {
         camera.aspect = window.innerWidth / window.innerHeight;
         camera.updateProjectionMatrix();
