--- a/frontend/index.html
+++ b/frontend/index.html
@@ -88,23 +88,22 @@ footer a:hover { text-decoration: underline; }
 © 2025 <a href="https://christoph-dammann.de" target="_blank">Dr. Christoph Dammann</a>
 </footer>
 
-<!-- Three.js + Loader -->
+<!-- Three.js -->
 <script src="https://cdn.jsdelivr.net/npm/three@0.146.0/build/three.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/three@0.146.0/examples/js/loaders/GLTFLoader.js"></script>
 
 <script>
-let model, talking = false, greeted = false;
-
+let model, talking = false;
 const scene = new THREE.Scene();
 const camera = new THREE.PerspectiveCamera(30, window.innerWidth/window.innerHeight, 0.1, 1000);
-camera.position.set(0, 0, 2.5);
+camera.position.set(0,0.3,3);
 
 const renderer = new THREE.WebGLRenderer({ canvas: document.getElementById("avatarCanvas"), antialias: true });
 renderer.setSize(window.innerWidth, window.innerHeight);
 renderer.setPixelRatio(window.devicePixelRatio);
 renderer.setClearColor(0x000000);
 
-const light = new THREE.DirectionalLight(0xffffff, 1.2);
+const light = new THREE.DirectionalLight(0xffffff,1.5);
 light.position.set(1,1,2);
 scene.add(light);
 scene.add(new THREE.AmbientLight(0x666666));
@@ -114,105 +113,119 @@ const loadingText = document.getElementById("loading");
 
 loader.load(
   "./avatar.glb",
-  gltf => {
+  (gltf) => {
     model = gltf.scene;
-    model.scale.set(0.4,0.4,0.4);
-    model.position.set(0,0,0);
+    model.scale.set(0.25,0.25,0.25);
+    model.position.set(0,-0.3,0);
     scene.add(model);
-    loadingText.style.display = "none";
+    loadingText.style.display="none";
     animate();
   },
   undefined,
-  err => console.error("Fehler beim Laden des Modells:", err)
+  (err) => console.error("Fehler beim Laden des Modells:", err)
 );
 
 let baseRotY=0, baseRotX=0, baseY=0;
 
-function animate(){
+function animate() {
   requestAnimationFrame(animate);
   if(model){
     if(talking){
       model.rotation.y = baseRotY + Math.sin(Date.now()*0.0015)*0.04;
       model.rotation.x = baseRotX + Math.sin(Date.now()*0.0019)*0.025;
       model.position.y = baseY + Math.sin(Date.now()*0.01)*0.004;
-    } else {
-      model.rotation.y = THREE.MathUtils.lerp(model.rotation.y, baseRotY, 0.05);
-      model.rotation.x = THREE.MathUtils.lerp(model.rotation.x, baseRotX, 0.05);
-      model.position.y = THREE.MathUtils.lerp(model.position.y, baseY, 0.05);
+    }else{
+      model.rotation.y = THREE.MathUtils.lerp(model.rotation.y,baseRotY,0.05);
+      model.rotation.x = THREE.MathUtils.lerp(model.rotation.x,baseRotX,0.05);
+      model.position.y = THREE.MathUtils.lerp(model.position.y,baseY,0.05);
     }
   }
   renderer.render(scene,camera);
 }
 
-// -------------------- Sprachsteuerung --------------------
+  // --- Sprachsteuerung / Mikrofon ---
 const micBtn = document.getElementById("micBtn");
 const micNotice = document.getElementById("micNotice");
 let recognizing = false, recognition;
 
 if("webkitSpeechRecognition" in window){
   recognition = new webkitSpeechRecognition();
-  recognition.lang = "de-DE";
-  recognition.continuous = false;
-  recognition.interimResults = false;
+  recognition.lang="de-DE";
+  recognition.continuous=false;
+  recognition.interimResults=false;
 
-  recognition.onresult = async (event)=>{
+  recognition.onresult = async (event) => {
     const text = event.results[0][0].transcript;
     console.log("🎙️ Gesprochen:", text);
-    try{
-      const response = await fetch("/ask",{ method:"POST", headers:{"Content-Type":"application/json"}, body:JSON.stringify({text}) });
-      const data = await response.json();
-      speak(data.answer);
-    }catch(e){ console.error("Fehler bei /ask:", e); }
-  };
 
-  recognition.onend = ()=>{ recognizing=false; };
-} else {
+    try{
+      const resp = await fetch("/ask",{
+        method:"POST",
+        headers:{"Content-Type":"application/json"},
+        body:JSON.stringify({text})
+      });
+      const data = await resp.json();
+      speak(data.answer); // nur sprechen, kein Text
+    }catch(e){
+      console.error("Fehler bei /ask:", e);
+    }
+  };
+  recognition.onend = ()=> recognizing=false;
+}else{
   micNotice.textContent="🎤 Sprachsteuerung wird in diesem Browser nicht unterstützt, bitte anderen Browser verwenden.";
 }
 
-micBtn.onclick = ()=>{
+micBtn.onclick=()=>{
   if(!recognition) return;
-  if(recognizing){ recognition.stop(); recognizing=false; micBtn.style.background="#222"; }
-  else{ recognition.start(); recognizing=true; micBtn.style.background="#555"; }
+  if(recognizing){
+    recognition.stop();
+    recognizing=false;
+    micBtn.style.background="#222";
+  }else{
+    recognition.start();
+    recognizing=true;
+    micBtn.style.background="#555";
+  }
 };
 
-// -------------------- Sprachsynthese --------------------
-let selectedVoice = null;
-
-function initVoices(){
+// --- männliche Stimme & TTS ---
+function getMaleVoice(){
   const voices = speechSynthesis.getVoices();
-  selectedVoice = voices.find(v=> /male|mann|stefan|markus|male/i.test(v.name)) || voices.find(v=>v.lang.startsWith("de")) || voices[0] || null;
-  if(!greeted && selectedVoice){
-    greeted=true;
-    speak("Seid gegrüßt, mein Freund. Ich bin Friedrich Barbarossa, nach tausend Jahren im Kaiserberg zu Lautern erwacht aus tiefem Schlummer. Sprecht, was begehrt Ihr?");
-  }
+  return voices.find(v=>/male|mann|stefan|markus|male/i.test(v.name)) ||
+         voices.find(v=>v.lang && v.lang.startsWith("de")) ||
+         voices[0] || null;
 }
 
 function speak(text){
-  if(!selectedVoice) return; // warten bis Stimme geladen
   const utter = new SpeechSynthesisUtterance(text);
   utter.lang="de-DE";
   utter.rate=0.95;
   utter.pitch=0.6;
-  utter.voice = selectedVoice;
+  utter.voice=getMaleVoice();
   utter.onstart=()=>{ talking=true; };
   utter.onend=()=>{ talking=false; };
   speechSynthesis.speak(utter);
 }
 
-// Stimmen laden
-if(typeof speechSynthesis!=="undefined"){
-  if(speechSynthesis.onvoiceschanged!==undefined){
-    speechSynthesis.onvoiceschanged=initVoices;
-  }
-  initVoices();
+// --- Stimmen laden ---
+if(typeof speechSynthesis!=="undefined" && speechSynthesis.onvoiceschanged!==undefined){
+  speechSynthesis.onvoiceschanged = ()=>{ getMaleVoice(); };
 }
 
-// -------------------- Resize --------------------
-window.addEventListener("resize", ()=>{
+// --- Begrüßung nach erster Interaktion ---
+let greeted=false;
+window.addEventListener("click",()=>{
+  if(!greeted){
+    greeted=true;
+    speak("Seid gegrüßt, mein Freund. Ich bin Friedrich Barbarossa, nach tausend Jahren im Kaiserberg zu Lautern erwacht aus tiefem Schlummer. Sprecht, was begehrt Ihr?");
+  }
+});
+
+// --- Fenstergröße anpassen ---
+window.addEventListener("resize",()=>{
   camera.aspect = window.innerWidth/window.innerHeight;
   camera.updateProjectionMatrix();
-  renderer.setSize(window.innerWidth, window.innerHeight);
+  renderer.setSize(window.innerWidth,window.innerHeight);
 });
 </script>
 </body>
